blendnet-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
        name: blendnet
        labels:
                name: blendnet
