crm.contentprovider.api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: webapi
    namespace: blendnet
    labels:
        app: contentprovider.webapi
spec:
     replicas: 1
     selector:
          matchLabels:
                service: webapi
     template:
          metadata:
                labels:
                        app: contentprovider.webapi
                        service: webapi
          spec:
                containers:
                - name: webapi
                  image: blendnetcr.azurecr.io/crm.contentprovider.api
                  imagePullPolicy: Always
                  ports:
                  - containerPort: 80
                    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
        name: webapi
        namespace: blendnet
        labels:
                app: contentprovider.webapi
                service: webapi
spec:
        type: LoadBalancer
        ports:
        - port: 80
          targetPort: 80
          protocol: TCP
        selector:
                service: webapi
