appgateway.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blendnet-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: blendnetdevkaizalacert
spec:
  rules:
  - http:
      paths:
      - path: /cmsapi/*
        backend:
          serviceName: blendnet-cms-api
          servicePort: 80
      - path: /userapi/*
        backend:
          serviceName: blendnet-user-api
          servicePort: 80
      - path: /retailerapi/*
        backend:
          serviceName: blendnet-retailer-api
          servicePort: 80
      - path: /omsapi/*
        backend:
          serviceName: blendnet-oms-api
          servicePort: 80
      - path: /cmsui/*
        backend:
          serviceName: blendnet-cms-web-ui
          servicePort: 80
      - path: /user/*
        backend:
          serviceName: blendnet-crm-user-api
          servicePort: 80
      - path: /incentiveapi/*
        backend:
          serviceName: blendnet-incentive-api
          servicePort: 80
