ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blendnet-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4 256k"
spec:
  rules:
  - host: blendnetdev.southeastasia.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: blendnet-crm-user-webapi
          servicePort: 80
        path: /crm/usermanagement/(.*)
